# knowledge

./: Dockerfile  LICENSE  README.md  _config.yml  a.dart  devcontainer.json  env.md  githubpage.md
articles/: lang1.md  pattern_matching.md  zenntesttest2.md
articles/zenn/: pattern_matching.md  zenntesttest1.md
docs/: _config.yml  githubpage.md  index.md  services.md  文字起こし.ipynb
docs/apis/: index.md
docs/batch/: index.md
docs/coderdojo/astropi/: index.md
docs/languages/: index.md
docs/media/: index.md
docs/products/: index.md
docs/products/kmsearch/: index.md
docs/python/: index.md  toexe.md
docs/python/streamlit/: index.md
docs/recipes/: index.md
docs/recipes/shell/: index.md
docs/services/: index.md
docs/services/prairie-cards/: index.md  名刺デザイン作成.ipynb
docs/sysbuild/: sysbuild.md
docs/tools/: index.md
draft/: g.kk  main.kk  tasktest.roc  test  test.roc
draft/book/: .env  bookinfo.txt  main.dart  pubspec.yaml
draft/book/.dart_tool/: package_config.json
draft/dlpdf/: README.md  pyproject.toml
draft/dlpdf/src/: main.py
draft/dlpdf/src/dlpdf/: __init__.py
draft/elixir/: Elixir.BookImporter.beam  Elixir.Hello.beam  Elixir.JsonFileLister.beam  Elixir.Main.beam  hello.ex  listupjson.ex  tes.exs  test.txt
draft/evernotepy/: .env  Dockerfile  docker-compose.yml  main.py  requirements.txt
draft/koka/: yesman.kk
draft/othello/: .gitignore  README.md  mix.exs
draft/othellopy/: main.py
draft/pyyoutube/: README.md  ffmpeg_error_log.txt  pyproject.toml  run.bat
qualifications/: index.md
sysbuild/: fess.md
(+29 files in other folders)
