[project]
name = "dlpdf"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "smpi.un", email = "ippotei.tsukemen@gmail.com" }
]
dependencies = [
    "pyperclip>=1.9.0",
    "pdfkit>=1.0.0",
    "requests>=2.32.3",
    "bs4>=0.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dlpdf"]
